src/less/_bootstrap.less
@import (reference) 'main.less';

/**
 * Various bootstrapping classes for site defaults
 */

@font-face {
    font-family: @font-main;
    font-style: normal;
    font-weight: 400;
}

html, body {
    height: 100%;
    width: 100%;
}

code, pre, .pre {
    padding: 5px;
    margin: 10px 0;
    background-color: #EFEFEF;
    border: 1px solid #DADADA;
    border-radius: 3px;
}

code {
    padding: 0 3px;
}

pre {
    margin: 10px 0;
    padding: 5px;
}

div {
    color: @site-inverted-colour;
    font-family: @font-main;
    font-size: @font-size-small;
}

h1 {
    margin-top: 0;
    font-size: @font-size-large;
}

h2, h3 {
    font-size: @font-size-medium;
    margin: 10px 0;
}

a,
a:focus {
    color: @site-inverted-colour;
    text-decoration: none;
    outline: 0;
    &:hover,
    &.active {
        color: @site-highlight-colour;
        text-decoration: none;
        outline: 0;
    }
}

.container {
    width: 100%;
    max-width: @container-width;
    height: 100%;
    position: relative;
    .center();
    .half {
        width: 50%;
        float: left;
    }
    .third {
        width: ~"calc(33% - @{gutter-size})";
    }
    .two-third {
        width: ~"calc(66% - @{gutter-size})";
    }
    @media screen and (max-width: @breakpoint-mobile) {
        .half,
        .third,
        .two-third {
            width: 100%;
            margin-top: @gutter-size;
        }
    }
}

.mobile {
    display: block;
    @media screen and (min-width: @breakpoint-mobile) {
        display: none !important;
    }
}

.tablet {
    display: block;
    @media screen and (min-width: @breakpoint-tablet) {
        display: none !important;
    }
}

.desktop {
    display: block;
    @media screen and (max-width: @breakpoint-mobile) {
        display: none !important;
    }
}

